--- a/m1/s1/g3/sito/index.html
+++ b/m1/s1/g3/sito/index.html
@@ -8,24 +8,37 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div id="margin">
-    <header>
-        <img src="immagini/logo.png" alt="logo.png">
-        <hr>
-        <p>Part of<strong> A SIMPLY FABULOUS THANKSGIVING</strong></p>
+    <header id="contenuto-alto">
+        <div class="logo-principale">
+            <img src="immagini/logo.png" alt="logo">
+        </div>
+        <div class="primo-titolo">
+            <p>Part of <strong> A SIMPLY FABULOUS THANKSGIVING</strong></p>
+        </div>
     </header>
-    </div>
-    <div class="contenuto">
-    <main>
-        <div class="primaparte">
-        <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
-        <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries,and creamy brie. It will become your new favorite holiday starter!</p>  
-            <img src="immagini/focaccia.png" alt="focaccia">
-            <figcaption>Image: Sally Vegas</figcaption>
-            <h3>FEATURED IN:</h3>
-            <p><a href="#">Fresh Cranberry Recipes That Go Beyond Sauce</a></p>
+    <main id="contenuto">
+        <section>
+        <h1>Focaccia with Caramelized Onions, Cranberries, and Brie </h1>
+        <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries,and creamy brie. It will become your new favorite holiday starter!</p>
+        </section>
+        <section>
+            <div id="focaccia">
+                <figure>
+                <img src="immagini/focaccia.png" alt="focaccia">
+                <figcaption>Image: Sally Vegas</figcaption>      
+                </figure>
+            </div>
+            <div class="featured">
+            <h3 class="feat1">FEATURED IN:</h3>
+            <a href="#" class="feat2">Fresh Cranberry Recipes That Go Beyound Sauce</a>
+            </div>
+        </section>
+        <section>
+           <div id="titolo-lista">
             <h3>Ingredients</h3>
-            <p><strong>For the focaccia:</strong></p>
+           </div>
+           <div>
+            <h4>For the focaccia:</h4>
             <ul>
                 <li>4 cups (500g) all-purpose flour</li>
                 <li>1 1/2 teaspoons instant yeast</li>
@@ -33,20 +46,26 @@
                 <li>1 3/4 cups (350g) lukewarm water</li>
                 <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
             </ul>
-            <p><strong>For the topping:</strong></p>
+            <h4>For the topping</h4>
             <ul>
                 <li>3 medium yellow onions, thinly sliced</li>
                 <li>1 tablespoon balsamic vinegar</li>
-                <li>1-2 tablespoons olive oil, for brushing on top</li>
-                <li>10 ounces brie, cut intr cubes (scrape rind off with a paring knife if desided, though it's not necessary)</li>
+                <li>1-2 tablespoons olive oil. for brushing on top</li>
+                <li>10 ounces brie, cut into cubes (scrape rind off with a paring knife if desired, though it's not necessary)</li>
                 <li>1 1/2 cups fresh or frozen cranberries</li>
             </ul>
+           </div>
+           </section>
+           <section>
+            <div id="method">
             <h3>Method</h3>
-            <p>1.<strong>Make the focaccia dough</strong></p>
-            <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometines knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+            </div>
+            <ol>
+                <li><h4>Make the focaccia dough</h4></li>
+                <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometines knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+            </ol>
             <p>Read more on <a href="#">Simply recipes</a></p>
-        </div>
+           </section>
     </main>
-    </div>
 </body>
 </html>
