--- a/m1/s1/g4/sito/index.html
+++ b/m1/s1/g4/sito/index.html
@@ -17,21 +17,21 @@
             </div>
             <nav>
                 <ul class="menu-navigazione">
-                    <li><a href="index.html" title="Home Page">⇒ HOME ⇐</a></li>
+                    <li><a href="index.html" title="Home Page">⇒ HOME &#8656</a></li>
                     <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">⇒ ARTICOLI ⇐</a></li>
-                    <li><a href="contatti.html" title="Candidati inviando un tuo cv">⇒ JOB ⇐</a></li>
+                    <li><a href="contatti.html" title="Candidati inviando un tuo cv">⇒ LAVORA CON NOI ⇐</a></li>
                 </ul>
             </nav>
 
     </header>
-
-     <hr>
-
-     <main>
+    <main id="secondo-blocco">
     <article>
+            <div class="titolo-main">
                 <h1>Come creare un template per i post</h1>
-                <p>di Mario Rossi - <span>pubblicato il 25-10-2020</span></p>
-    
+            </div>  
+            <div class="autore">
+                <p><i class="fas fa-pen-square" style="color: #7e8795;"></i> di Mario Rossi - <span><i class="fas fa-clock" style="color: #7e8795;"></i> pubblicato il 25-10-2020</span></p>
+            </div>  
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da applicare a tutte le pagine</p>
     
                 <p>Le varie aree saranno quindi suddivise in:</p>
