--- a/m1/s1/g4/sito/index.html
+++ b/m1/s1/g4/sito/index.html
@@ -32,8 +32,9 @@
             <div class="autore">
                 <p><i class="fas fa-pen-square" style="color: #7e8795;"></i> di Mario Rossi - <span><i class="fas fa-clock" style="color: #7e8795;"></i> pubblicato il 25-10-2020</span></p>
             </div>  
+            <div class="testo">
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da applicare a tutte le pagine</p>
-    
+            </div>
                 <p>Le varie aree saranno quindi suddivise in:</p>
                 <ul>
                     <li>Contenuti di intestazione del tag <code>&lt;header&gt;</code></li>
