--- a/m1/s1/g4/sito/index.html
+++ b/m1/s1/g4/sito/index.html
@@ -93,12 +93,16 @@
                     </tbody>
                 </table>
                 </div> 
-                <p>Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/" target="blank" title="Validatore CSS online del W3C">tool online</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
-
+                <div class="link">
+                <p>Un test di validazione potrà essere fatto tramite il <a href="#" target="_blank">tool online</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
+                </div>
+                <div class="video">
                 <iframe width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
-                <section>
-                    <h2>Novità</h2>
+                </div>
+                <section id="iscrizione">
+                    <div class="titolo-iscrizione">
+                    <h2>NOVITÀ</h2>
+                    </div>
                     <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
                     
                     <form method="POST" action="elabora_form.php">
