--- a/m1/s1/g5/sito/index.html
+++ b/m1/s1/g5/sito/index.html
@@ -61,9 +61,9 @@
         </section>
     </main>
     <article>
-        <section>
-            <div id="articolo1">
-                
+        <section id="sezione4">
+            <div class="articolo1">
+                <img src="assets/images/foto1.jpg" alt="foto1">
                 <h3>Il tuo PC</h3>
                 <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
             </div>
