--- a/m1/s1/g5/sito/index.html
+++ b/m1/s1/g5/sito/index.html
@@ -48,38 +48,38 @@
             </div>
         </section>
         <section id="sezione3">
-            <div class="testimoniale">
+            <div class="testimonianze">
                 <h2>Epicode garantisce</h2>
-            </div class="testimoniale">
-            <div class="testimoniale">   
+            </div class="testimonianze">
+            <div class="testimonianze">   
                 <p>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</p>
             </div> 
-            <div class="testimoniale1">
+            <div class="testimonianze1">
                 <p class="mario">Mario Rossi</p>
                 <p>CEO, Epicode</p>
             </div>
         </section>
     </main>
     <article>
-        <section id="sezione4">
+        <section class="sezione4">
             <div class="articolo1">
                 <img src="assets/images/foto1.jpg" alt="foto1">
                 <h3>Il tuo PC</h3>
                 <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
             </div>
         </section>
-        <section>
-            <div>
-
+        <section class="sezione4">
+            <div class="articolo1">
+              <img src="assets/images/foto2.jpg" alt="foto2">
             </div>
             <div>
                 <h3>Impara ora</h3>
                 <p>Impara da chi diventera tra qualche anno, e diventa una rockstar come loro.</p>
             </div>
         </section>
-        <section>
-            <div>
-
+        <section class="sezione4">
+            <div class="articolo1">
+               <img src="assets/images/foto3.jpg" alt="foto3">
             </div>
             <div>
                 <h3>Lavora subito</h3>
@@ -87,12 +87,16 @@
             </div>
         </section>
     </article>
-    <footer>
+    <footer id="piedipagina">
         <h2>Contattaci</h2>
-        <a href="tel:(+39)11223456">.(+39)11223456</a>
-        <a href="mailto:info@epicode.school">info@epicode.school</a>
-        <p>Via Appia 1 - 00100 Roma (RM)</p>
+        <div class="contatti">
+        <p><i class="fas fa-phone-square-alt"></i> <a href="tel:(+39)11223456">.(+39)11223456</a></p>
+        <p><i class="fas fa-envelope-square"></i> <a href="mailto:info@epicode.school">info@epicode.school</a></p>
+        <p><i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma (RM)</p>
+        </div>
+        <div class="contatti">
         <p>&copy; 2021. Immagini di <a href="#">Pixbay.</a></p>
+        </div>
     </footer>
 </body>
 </html>
