--- a/m2/s1/g2/Pag completa/mobile.html
+++ b/m2/s1/g2/Pag completa/mobile.html
@@ -1,97 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav id="barra">
-        <nav id="barra">
-            <ul>
-                <li>Our Honey</li>
-                <li>Trace Honey</li>
-                <li class="shop"> <img src="../assets/imgs/logo.png" alt=""> SHOP</li>
-                <li>Facilities</li>
-                <li>Contacts</li>
-            </ul>
-        </nav>
+      <nav id="barra">
+        <ul>
+          <li>Our Honey</li>
+          <li>Trace Honey</li>
+          <li class="shop">
+            <img src="../assets/imgs/logo.png" alt="" /> SHOP
+          </li>
+          <li>Facilities</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
     </nav>
     <main>
-        <h1>Best Selling Products</h1>
-        <div id="card">
-            <div class="immagine"></div>
-            <div class="contenuto">
-                <div class="primoTesto">
-                <h3>100% Bio Honey</h3>
-                <p>Italian, not treated<span class="prezzo">7$/Kg</span> </p>               
-                </div>                     
-                <form class="formBot">
-                <button class="bottone">Add to cart</button>
-                </form>
-            </div>
+      <h1>Best Selling Products</h1>
+      <div id="card">
+        <div class="immagine"></div>
+        <div class="contenuto">
+          <div class="primoTesto">
+            <h3>100% Bio Honey</h3>
+            <p>Italian, not treated<span class="prezzo">7$/Kg</span></p>
+          </div>
+          <form class="formBot">
+            <button class="bottone">Add to cart</button>
+          </form>
         </div>
-        <div id="card">
-            <div class="immagine"></div>
-            <div class="contenuto">
-                <div class="primoTesto">
-                <h3>100% Bio Honey</h3>
-                <p>Italian, not treated<span class="prezzo">7$/Kg</span> </p>               
-                </div>                    
-                <form class="formBot">
-                <button class="bottone">Add to cart</button>
-                </form>
-            </div>
+      </div>
+      <div id="card">
+        <div class="immagine"></div>
+        <div class="contenuto">
+          <div class="primoTesto">
+            <h3>100% Bio Honey</h3>
+            <p>Italian, not treated<span class="prezzo">7$/Kg</span></p>
+          </div>
+          <form class="formBot">
+            <button class="bottone">Add to cart</button>
+          </form>
         </div>
-        <div id="card">
-            <div class="immagine"></div>
-            <div class="contenuto">
-                <div class="primoTesto">
-                <h3>100% Bio Honey</h3>
-                <p>Italian, not treated<span class="prezzo">7$/Kg</span> </p>             
-                </div>                     
-                <form class="formBot">
-                <button class="bottone">Add to cart</button>
-                </form>
-            </div>
+      </div>
+      <div id="card">
+        <div class="immagine"></div>
+        <div class="contenuto">
+          <div class="primoTesto">
+            <h3>100% Bio Honey</h3>
+            <p>Italian, not treated<span class="prezzo">7$/Kg</span></p>
+          </div>
+          <form class="formBot">
+            <button class="bottone">Add to cart</button>
+          </form>
         </div>
-        <div id="card">
-            <div class="immagine"></div>
-            <div class="contenuto">
-                <div class="primoTesto">
-                <h3>100% Bio Honey</h3>
-                <p>Italian, not treated<span class="prezzo">7$/Kg</span> </p>               
-                </div>                     
-                <form class="formBot">
-                <button class="bottone">Add to cart</button>
-                </form>
-            </div>
+      </div>
+      <div id="card">
+        <div class="immagine"></div>
+        <div class="contenuto">
+          <div class="primoTesto">
+            <h3>100% Bio Honey</h3>
+            <p>Italian, not treated<span class="prezzo">7$/Kg</span></p>
+          </div>
+          <form class="formBot">
+            <button class="bottone">Add to cart</button>
+          </form>
         </div>
-        <div id="card">
-            <div class="immagine"></div>
-            <div class="contenuto">
-                <div class="primoTesto">
-                <h3>100% Bio Honey</h3>
-                <p>Italian, not treated<span class="prezzo">7$/Kg</span> </p> 
-                </div>     
-                <form class="formBot">
-                <button class="bottone">Add to cart</button>
-                </form>
-            </div>
+      </div>
+      <div id="card">
+        <div class="immagine"></div>
+        <div class="contenuto">
+          <div class="primoTesto">
+            <h3>100% Bio Honey</h3>
+            <p>Italian, not treated<span class="prezzo">7$/Kg</span></p>
+          </div>
+          <form class="formBot">
+            <button class="bottone">Add to cart</button>
+          </form>
         </div>
-        <h3 class="title">Lasest News</h3>
-        <div id="conteiner">
-            <div class="testo">
-                <h4>Our delicious honey</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatibus atque eveniet laudantium est esse optio eos expedita ducimus culpa, itaque omnis modi, labore provident, reiciendis repellendus ex similique animi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque nemo totam doloribus vitae. Culpa expedita corporis alias numquam saepe id enim tenetur quod a provident ratione, iusto voluptates exercitationem totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, consequuntur! Nihil quas alias eveniet nam nulla, totam voluptate earum, harum placeat aliquam delectus minus nobis et voluptas, tempora reprehenderit vitae!
-                </p>
-            </div>
-            <div class="immagine2">
-            </div>
+      </div>
+      <h3 class="title">Lasest News</h3>
+      <div id="conteiner">
+        <div class="testo">
+          <h4>Our delicious honey</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+            voluptatibus atque eveniet laudantium est esse optio eos expedita
+            ducimus culpa, itaque omnis modi, labore provident, reiciendis
+            repellendus ex similique animi. Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Doloremque nemo totam doloribus vitae.
+            Culpa expedita corporis alias numquam saepe id enim tenetur quod a
+            provident ratione, iusto voluptates exercitationem totam. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+            consequuntur! Nihil quas alias eveniet nam nulla, totam voluptate
+            earum, harum placeat aliquam delectus minus nobis et voluptas,
+            tempora reprehenderit vitae!
+          </p>
         </div>
+        <div class="immagine2"></div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
