--- a/m2/s2/g2/index.html
+++ b/m2/s2/g2/index.html
@@ -36,10 +36,10 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Last Minute</a>
+                    <a class="nav-link ">Last Minute</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Recensioni</a>
+                    <a class="nav-link ">Recensioni</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
