--- a/m2/s3/g1/index.html
+++ b/m2/s3/g1/index.html
@@ -10,17 +10,17 @@
   <body>
     <h1>FORM PER CREARE OGGETTI(PETS)</h1>
     <form id="pet-form">
-      <label for="pet-name">Nome Animale:</label>
-      <input type="text" id="pet-name" name="petName" required />
+      <label>Nome Animale:</label>
+      <input type="text" id="pet-name" name="petName" />
 
-      <label for="owner-name">Nome Proprietario:</label>
-      <input type="text" id="owner-name" name="ownerName" required />
+      <label>Nome Proprietario:</label>
+      <input type="text" id="owner-name" name="ownerName" />
 
-      <label for="species">Specie:</label>
-      <input type="text" id="species" name="species" required />
+      <label>Specie:</label>
+      <input type="text" id="species" name="species" />
 
-      <label for="breed">Razza:</label>
-      <input type="text" id="breed" name="breed" required />
+      <label>Razza:</label>
+      <input type="text" id="breed" name="breed" />
 
       <button type="submit">Aggiungi Animale</button>
     </form>
